// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render correctly 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-tyvr0z-StyledOutlinedButton:hover,
.cache-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.cache-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.cache-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-3sara7-StyledOutlinedButton:hover,
.cache-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-ulwsob-StyledOutlinedButton:hover,
.cache-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 2"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1tanet4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tanet4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13qtehh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13qtehh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-13qtehh-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 2`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1tanet4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tanet4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13qtehh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13qtehh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-13qtehh-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-ulwsob-StyledOutlinedButton:hover,
.cache-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.cache-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-3sara7-StyledOutlinedButton:hover,
.cache-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-tyvr0z-StyledOutlinedButton:hover,
.cache-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageClick 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-ulwsob-StyledOutlinedButton:hover,
.cache-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.cache-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-3sara7-StyledOutlinedButton:hover,
.cache-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-tyvr0z-StyledOutlinedButton:hover,
.cache-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 1"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 2"
        class="cache-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.cache-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-tyvr0z-StyledOutlinedButton:hover,
.cache-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 0 0 1.06-1.06L4.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06zm8.25-3.25L8.22 7.47a.75.75 0 0 0 0 1.06l3.25 3.25a.75.75 0 1 0 1.06-1.06L9.81 8l2.72-2.72a.75.75 0 0 0-1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-znppnv e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.78 7.47a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L11.19 8 8.47 5.28a.75.75 0 0 1 1.06-1.06zM4.53 4.22l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L6.19 8 3.47 5.28a.75.75 0 0 1 1.06-1.06"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
